updStatus переименование get_limitcon
spr_fields_models.get_limitcon40
сделано, чтобы не путать с аналогичной
процедурой get_limitcon70

--- a/advuser/templates/advuser/upd_status_user.html
+++ b/advuser/templates/advuser/upd_status_user.html
@@ -35,7 +35,7 @@
                 <ul class="ml-2" style="font-size:0.8rem;">
                     <li>Чтобы обновить статус до рукГруппы, участнику проекта желательно освоиться в качестве менеджера</li>
                     <li>Чтобы обновить статус до рукГруппы с макс. правами, участнику проекта необходимо освоиться в качестве рукГруппы</li>
-                    <li>Понижение статуса автоматически переподчиняет всю структуру на рукПроекта. Данные не восстанавливаются </li>
+                    <li>Понижение статуса автоматически переподчиняет всю структуру на рукГруппы. Данные не восстанавливаются </li>
                 </ul>
             </div>
 
