--- a/advuser/templates/advuser/prof_table_format.html
+++ b/advuser/templates/advuser/prof_table_format.html
@@ -16,40 +16,23 @@
 
             <div class="col-md-6 col-lg-6 col-sm-12 mb-2">
                 <div class="card">
-                    <div class="card-header text-center">
-                        {{row.full_name}}
+                    <div class="card-header">
+                        <h5 class="card-title mb-0"> {{row.full_name}} </h5>
+                            <small> <strong>Логин  {{row.username}} </strong> </small>
+                        <div >
+                        </div>
                     </div>
+                    
                     <div class="card-body" style="font-size:0.7rem;" >
                         <div>
-                            <h6 class="card-subtitle" style="margin-left:4rem; font-size:0.8rem;" >Статус: {{row.status}}</h6>
-                            
+                            <h6 class="card-subtitle" >Статус: {{row.status}}</h6>
+                            <div class="w-100">
+                                Лимит подкл.: <strong class="font-weight-bold">{{row.status_perm}}</strong>
+                            </div>
                         </div>
 
                         <div class="row mb-3 mt-3">
-                            {% if row.levelperm > 30 %}
-                                {% if row.levelperm == 40 or row.levelperm == 70  %}
-			                        <div class="row w-100">
-                                        <div class="col-4 text-right">Кол-во подкл.</div>
-                                        <div class="col-8 text-left">{{row.limitcon}}</div>
-                                    </div>
-                                {% endif %}
-                            
-                                {% if row.levelperm == 70 %}                                    
-                                    <div class="row w-100">
-                                            <div class="col-4 text-right">Лимит рукГр.</div>
-                                            <div class="col-8 text-left">{{row.limitcon40}}</div>
-                                        </div>
-                                    <div class="row w-100">
-                                        <div class="col-4 text-right">Лимит рукГр макс.</div>
-                                        <div class="col-8 text-left">{{row.limitcon70}}</div>
-                                    </div>
-                                {%endif%}
-			                {% endif %}
 
-                            <div class="row w-100">
-                                <div class="col-4 text-right">Логин</div>
-                                <div class="col-8 text-left">{{row.username}}</div>
-                            </div>
                             <div class="row w-100">
                                 <div class="col-4 text-right">ID комп.</div>
                                 <div class="col-8 text-left">{{row.idcomp}}</div>
@@ -78,12 +61,16 @@
                                 <div class="col-4 text-right">Логин quest</div>
                                 <div class="col-8 text-left">{{row.logincl}}</div>
                             </div>
-                            
-                            
 
                         </div>
-                        <a href="{% url 'updmesdata' mes=row.username %}" class="btn btn-info" style="padding-bottom:0; padding-top:0; font-size:0.7rem">Изм. профиль</a>
+
                     </div>
+
+                    <div class="card-footer">
+                    <a href="{% url 'updmesdata' mes=row.username %}" class="card-link" >Изменить профиль</a>
+
+                    </div>
+
                 </div>
             </div>            
 
