testing: Завершение верстки
Добавление выпадающего списка на admPanel
Создание js для url
Тестирование

--- a/advuser/templates/advuser/header_panel.html
+++ b/advuser/templates/advuser/header_panel.html
@@ -92,7 +92,7 @@
     </div>
 </form>
 
-<a class="text-info" href="{% url 'listprofils' %}" >Список менеджеров</a>
+<a class="text-info" href="{% url 'listprofils' page=1 filter='70-40-30' %}" >Список менеджеров</a>
 <br />
 
 <a class="text-info" href="{% url 'addprof_member' %}" >Создать профиль менеджера</a>
