--- a/advuser/templates/advuser/prof_table_format.html
+++ b/advuser/templates/advuser/prof_table_format.html
@@ -2,6 +2,7 @@
 
 
 {% extends 'layout/base_layout.html' %}
+{% load static %}
 
 
 {%block header%} <h3 class="text-center"> Список пользователей - участников проекта  </h3> {%endblock%}
@@ -10,8 +11,10 @@
 {%block main %}
 
 <div class="container-fluid">
-    
+
     <div class="row">
+
+
     {% for row in rows %}
 
             <div class="col-md-6 col-lg-6 col-sm-12 mb-2">
@@ -75,19 +78,34 @@
     {% endfor %}
     </div>
 
-    <div class="mb-2 mt-2">
-        <span class="mr-2" > выбрано {{dc_page.sel_page}} (из {{dc_page.num_pages}}) </span>
+    <style>
+        .font_family { font-family:Courier New, Courier, monospace; }
+    </style>
+
+    <div id="btn_url" url="{% url 'listprofils' page='page' filter='filter' %}" class="mb-2 mt-2" style="display: Inline-block" >
+        <span class="mr-2" 
+              style="font-size:0.8rem;" >выбрано {{dc_page.sel_page}}(из {{dc_page.num_pages}})</span>
         {% for page in num_pages %}
             {% if dc_page.sel_page == page %}
-                <span class="bg-info" style="padding:0.2em 0.5em; font-family:Courier New, Courier, monospace; color:#ffffff" >{{page}}</span>                 
+                <span id="span_sel" class="bg-info font_family" 
+                      style="padding:0.2em 0.5em;  color:#ffffff" >{{page}}</span>                 
                 
             {%else%}                
-                    <a href="?page={{page}}">
-                        <span class="ml-1" style="padding:0 0.2em;">{{page}}</span> </a>
+                    <button id="btnsel_{{page}}" class="btn_sel mx-1 font_family" 
+                            style="padding:0 0.4em; font-size:0.85rem;" >{{page}}</button>
             {% endif %}
         {% endfor %}
+        
+    </div>
 
-        {#{"num_rows": 5, "sel_page": 2, "num_count": 14, "num_pages": 3}#} 
+    <div class="ml-2" style="font-size:0.7rem; display: Inline-block">
+        Фильтр: 
+        <select filter="{{filter}}">
+            <option value="70-40-30">Список рукГрупп, менеджеры</option>
+            <option value="30">Список менеджеров</option>
+            <option value="70">Только рукГрупп максУровень</option>
+            <option value="10-20">Список клиенты, гостВход</option>
+        </select>
     </div>
 
     <div class="mt-2">
@@ -97,3 +115,50 @@
 </div>
 
 {%endblock main%}
+
+
+{% block scripts %}
+
+{# Загрузка js  #}
+<script type="text/javascript">
+        (function ($) {
+            $(document).ready(function () {
+
+                // Настройка списка фильтра 
+                select = $('select');
+                filter = select.attr('filter');
+                select.val(filter);
+
+                $('select').change(function (e) {                    
+                    var sel = $('select').val();
+
+                    url = $('#btn_url').attr('url');
+                    url = url.replace('page', '1');
+                    url = url.replace('filter', sel);
+
+                    window.location.href = url;
+                });
+
+
+                $('.btn_sel').click(function (e) {
+                    // номер страницы
+                    attr = $(this).attr('id');
+                    index = attr.indexOf('_');
+                    page = attr.substr(index+1);
+
+                    // идентификатор фильтра
+                    var sel = $('select').val();
+                    url = $('#btn_url').attr('url');
+
+                    // обновление url
+                    url = url.replace('page', page);
+                    url = url.replace('filter', sel);
+
+                    window.location.href = url;
+                });
+
+            });
+        })(jQuery);
+</script>
+    
+{% endblock %}
